[project]
name = "diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
