[project]
name = "diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "tortoise-orm>=0.25.4",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.aerich]
tortoise_orm = "app.db.database.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
